# tflite-cpp-project

./: CMakeLists.txt  Dockerfile  README.md
include/: CommandLine.hpp  ExceptionHandler.hpp  Model.hpp  ModelLoader.hpp  TfliteNode.hpp
src/: main.cpp
src/model/: Model.cpp
src/model/tflite/: TfliteNode.cpp
src/utils/parser/: CommandLine.cpp  ModelLoader.cpp
